k8s/geonames-sparql/geonames-sparql-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: geonames-sparql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: geonames-sparql
  template:
    metadata:
      labels:
        app: geonames-sparql
    spec:
      volumes:
        - name: data
          emptyDir: {}
      containers:
        - name: app
          image: atomgraph/fuseki:9985c4edd850c9277d241f6edc0d883013713ad3
          args: ["--file=/data/geonames.nt", "/geonames"]
          ports:
            - containerPort: 3030
          volumeMounts:
            - name: data
              mountPath: /data
      imagePullSecrets:
        - name: ghcr
