k8s/geonames-sparql/geonames-sparql-service.yml
apiVersion: v1
kind: Service
metadata:
  name: geonames-sparql
spec:
  ports:
    - port: 80
      targetPort: 3030
  selector:
    app: geonames-sparql
